changed base url in config.toml

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://example.com/"
+baseURL = "https://aaltoprojectzahir.github.io/"
 # include content marked as draft
 buildDrafts = false
 # include content with publishdate in the future
