--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://aaltoprojectzahir.github.io/"
+baseURL = "https://zaheeeb.github.io/aaltoProjectZahir.github.io/"
 # include content marked as draft
 buildDrafts = false
 # include content with publishdate in the future
