--- a/.github/workflow/gh-pages.yml
+++ b/.github/workflow/gh-pages.yml
@@ -26,7 +26,9 @@ jobs:
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
-        if: github.ref == 'refs/heads/master'
+        #if: github.ref == 'refs/heads/master'
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: gh-pages
           publish_dir: ./public
+          enable_jekyll: true
